# trino-history-server

./: README.md
.github/workflows/: check_backend.yml
backend/: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
backend/.sqlx/: query-49feb5d5d8b397dfc4de1b27ee1b8e2cd2114d2afd42a0eceacbfbd604b68ad4.json  query-56750c82caec7991c06d50764bf4e908bf49c63d35691da314cd49f4bad006af.json  query-958979706942c72464a9c8425d9db1c07d97bd38fca1aa0d8426ce5d400bfba9.json  query-9eead582957f5778af8d922c8b02e8f96889e6215e6acdd4202208cd578f47c5.json
backend/docker/init/pg/: init-db.sh
backend/migrations/: 20240310223041_events.sql
backend/queries/: event_details.sql  event_list.sql  event_list_count.sql
backend/samples/: jsonPlan.json  operatorSummaries.json  payload.json
backend/src/: db.rs  main.rs  web.rs
backend/src/db/: pool.rs
backend/src/web/: error.rs  listener.rs  route.rs  ui.rs
backend/src/web/route/: event.rs
backend/src/web/ui/: details.rs  list.rs  table.rs
frontend/: .dockerignore  .env  Makefile  README.md  bun.lockb  bunfig.toml  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: ButtonLink.tsx  nav.tsx  queryPlanGraph.tsx
frontend/src/routes/: __root.tsx  index.lazy.tsx  overview.lazy.tsx
frontend/src/routes/query/: details.$id.lazy.tsx  details.lazy.tsx
