[package]
name = "trino-history-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dotenv = "0.15"
axum = { version = "0.7"}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# https://github.com/launchbadge/sqlx
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "any", "postgres", "uuid", "chrono", "json"] }
#
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
#anyhow = "1.0"
uuid = "1.8.0"
tower-http  = { version = "0.5", features = ["cors"] }
