[package]
name = "trino-history-server"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7"}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "any", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
#anyhow = "1.0"
uuid = "1.8.0"
tower-http  = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
